Make a cool website

--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
     <title>My first Html task</title>
 </head>
 <body>
-   <p> Hi there we coming for you all</p> 
+
+    <header> Listen to this one 
+
+     <ul> <a href="http://127.0.0.1:5500/WEEK3/week_3_tasks/html_basic/index.html">Link one </a></ul>
+     <ul> <a href="http://127.0.0.1:5500/week3/week_3_tasks/html_basic/html_basic/tweets.html"> Link two </a> </ul>
+     <li> <a href="http://127.0.0.1:5500/week3/week_3_tasks/html_basic/html_basic/tweets.html"> Link three </a> </li>
+     <li> <a href="http://127.0.0.1:5500/week3/week_3_tasks/html_basic/html_basic/tweets.html"> Link four </a> </li>
+    </header>
+
+    <main> Check out these truth
+
+    <article> 
+        
+
+        <aside>  “placeholder to add comment thread later”. </aside>
+    <p> Hi there we coming for you all</p> 
    <h1>I like you</h1>
    <h2>ily</h2>
    <h3>ily</h3>
@@ -28,5 +43,16 @@
 
    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"> Link</a> <img src="your Image.png" alt="Linked Image">
    <a href="http://127.0.0.1:5500/week3/week_3_tasks/html_basic/html_basic/tweets.html">See tweets</a>
-   </body>
+   
+</article>
+
+</main>
+   <footer>
+    <p> Made by Equere Edidiong - <a href="http://127.0.0.1:5500/week3/week_3_tasks/html_basic/html_basic/tweets.html">  target="_blank">here</a></p>
+    Email: EquereAedidiong@gmail.com
+   </footer>   
+
+</body>
+   
+   
 </html>
