Add some level of creativity

--- a/index.html
+++ b/index.html
@@ -20,7 +20,23 @@
     <article> 
         
 
-        <aside>  “placeholder to add comment thread later”. </aside>
+        <aside>  “placeholder to add comment thread later”.
+            <table>
+                <tr>
+                  <th>Name</th> <th>Age</th> <th>Country</th>
+                </tr>
+                <tr>
+                  <td>John</td> <td>25</td> <td>USA</td>
+                  <td>  Emily</td> <td>28</td> <td>Canada</td>
+                <td>Sophia</td> <td>21</td> <td>UK</td>
+                </tr>
+                <tr>
+                  <td>February</td>
+                  <td>$80</td>
+                </tr>
+              </table>s
+        
+    </aside>
     <p> Hi there we coming for you all</p> 
    <h1>I like you</h1>
    <h2>ily</h2>
