--- a/index.html
+++ b/index.html
@@ -22,19 +22,37 @@
 
         <aside>  “placeholder to add comment thread later”.
             <table>
-                <tr>
-                  <th>Name</th> <th>Age</th> <th>Country</th>
-                </tr>
-                <tr>
-                  <td>John</td> <td>25</td> <td>USA</td>
-                  <td>  Emily</td> <td>28</td> <td>Canada</td>
-                <td>Sophia</td> <td>21</td> <td>UK</td>
-                </tr>
-                <tr>
-                  <td>February</td>
-                  <td>$80</td>
-                </tr>
-              </table>s
+                <thead>
+                  <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Country</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>John</td>
+                    <td>25</td>
+                    <td>USA</td>
+                  </tr>
+                </tbody>
+                <tbody>
+                    <tr>
+                      <td>Emily</td>
+                      <td>28</td>
+                      <td>Canada</td>
+                    </tr>
+                  </tbody>
+                  
+                  <tbody>
+                    <tr>
+                      <td>Sophia</td>
+                      <td>21</td>
+                      <td>UK</td>
+                    </tr>
+                  </tbody>
+
+              </table>
         
     </aside>
     <p> Hi there we coming for you all</p> 
