Add some level of creativity

--- a/index.html
+++ b/index.html
@@ -50,11 +50,8 @@
               </tbody>
 
           </table>        
-
-        <aside>  “placeholder to add comment thread later”.
-
-        
-    </aside>
+    </article>
+    <aside>  “placeholder to add comment thread later”.</aside>
     <p> Hi there we coming for you all</p> 
    <h1>I like you</h1>
    <h2>ily</h2>
