Add some level of creativity

--- a/index.html
+++ b/index.html
@@ -3,21 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first Html task</title>
+    <title>Document</title>
 </head>
 <body>
-
-    <header> Listen to this one 
-
-     <ul> <a href="http://127.0.0.1:5500/WEEK3/week_3_tasks/html_basic/index.html">Link one </a></ul>
-     <ul> <a href="http://127.0.0.1:5500/week3/week_3_tasks/html_basic/html_basic/tweets.html"> Link two </a> </ul>
-     <li> <a href="http://127.0.0.1:5500/week3/week_3_tasks/html_basic/html_basic/tweets.html"> Link three </a> </li>
-     <li> <a href="http://127.0.0.1:5500/week3/week_3_tasks/html_basic/html_basic/tweets.html"> Link four </a> </li>
-    </header>
-
-    <main> Check out these truth
-
-    <article> 
+    <article>
         <table>
             <thead>
               <tr>
@@ -40,7 +29,13 @@
                   <td>Canada</td>
                 </tr>
               </tbody>
-              
+              <tbody>
+                <tr>
+                  <td>Micheal/td>
+                  <td>32</td>
+                  <td>Australia</td>
+                </tr>
+              </tbody>
               <tbody>
                 <tr>
                   <td>Sophia</td>
@@ -49,41 +44,8 @@
                 </tr>
               </tbody>
 
-          </table>        
+          </table>
+
     </article>
-    <aside>  “placeholder to add comment thread later”.</aside>
-    <p> Hi there we coming for you all</p> 
-   <h1>I like you</h1>
-   <h2>ily</h2>
-   <h3>ily</h3>
-
-   <p>Hi there</p>
-   <h1>I like you</h1>
-   <h2>ily</h2>
-   <h3>ily</h3>
-
-   <p>Hi there</p>
-   <h1>I like you</h1>
-   <h2>ily</h2>
-   <h3>ily</h3>
-
-   <p>Hi there</p>
-   <h1>I like you</h1>
-   <h2>ily</h2>
-   <h3>ily</h3>
-
-   <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"> Link</a> <img src="your Image.png" alt="Linked Image">
-   <a href="http://127.0.0.1:5500/week3/week_3_tasks/html_basic/html_basic/tweets.html">See tweets</a>
-   
-</article>
-
-</main>
-   <footer>
-    <p> Made by Equere Edidiong - <a href="http://127.0.0.1:5500/week3/week_3_tasks/html_basic/html_basic/tweets.html">  target="_blank">here</a></p>
-    Email: EquereAedidiong@gmail.com
-   </footer>   
-
 </body>
-   
-   
 </html>
