Add some level of creativity

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>John</td>
-                <td>25</td>
-                <td>USA</td>
-              </tr>
+                <tr>
+                  <td>John</td>
+                  <td>25</td>
+                  <td>USA</td>
+                </tr>
             </tbody>
             <tbody>
                 <tr>
@@ -28,24 +28,22 @@
                   <td>28</td>
                   <td>Canada</td>
                 </tr>
-              </tbody>
-              <tbody>
+            </tbody>
+            <tbody>
                 <tr>
-                  <td>Micheal/td>
+                  <td>Micheal</td>
                   <td>32</td>
-                  <td>Australia</td>
+                  <td>Austalian</td>
                 </tr>
-              </tbody>
-              <tbody>
+            </tbody>
+            <tbody>
                 <tr>
                   <td>Sophia</td>
                   <td>21</td>
                   <td>UK</td>
                 </tr>
-              </tbody>
-
-          </table>
-
+            </tbody>
+        </table>
     </article>
 </body>
 </html>
