Make a cool other webpage

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,6 +6,46 @@
     <title>My first Html task</title>
 </head>
 <body>
+  <article>
+    <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+            <tr>
+              <td>John</td>
+              <td>25</td>
+              <td>USA</td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+              <td>Emily</td>
+              <td>28</td>
+              <td>Canada</td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+              <td>Micheal</td>
+              <td>32</td>
+              <td>Austalian</td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+              <td>Sophia</td>
+              <td>21</td>
+              <td>UK</td>
+            </tr>
+        </tbody>
+    </table> 
+
+  </article>
    <p> Hi there we coming for you all</p> 
    <h1>I like you</h1>
    <h2>ily</h2>
