--- a/index.html
+++ b/index.html
@@ -3,47 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EQUERE EDIDIONG ALFRED -Personal Portfolio</title>
 </head>
 <body>
+    <header>
+        <h1>Equere EDIDIONG</h1>
+         <p> The best is yet to come</p>
+    </header>
+
+    <nav> 
+        <ul>
+            <li><a href="index.html">Project</a></li>
+             <li><a href="about.html">About Me</a></li>
+             <li><a href="services.html">Services</a></li>
+             <li><a href="contact.html">Contact</a></li>
+        </ul>
+
+    </nav>
+
+    <section>
+        
+        <section id="projects">
+            <h2>Projects</h2>
+            <article>
+                <h3>Audaxious</h3>
+                <p>A web 3.0 app <a href="https://github/equereedidiong" target="_blank">Github Profile</a> for more projects.</p>
+
+            </article>
+        </section>
+        <section id="about">
+            <h2>about</h2>
+             <p>git, gitub etc</p>
+        </section>
+        <section id="Contact">
+            <h2>Contact</h2>
+             <p><a href="https://github/equereedidiong" target="_blank">Github Profile</a></p>
+             <p><a href="https://www.linkedin.com/in/equereedidiong/" target="_blank">LinkedIn</a></p>
+        </section>
+    </section>
+
     <article>
-        <table>
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Age</th>
-                <th>Country</th>
-              </tr>
-            </thead>
-            <tbody>
-                <tr>
-                  <td>John</td>
-                  <td>25</td>
-                  <td>USA</td>
-                </tr>
-            </tbody>
-            <tbody>
-                <tr>
-                  <td>Emily</td>
-                  <td>28</td>
-                  <td>Canada</td>
-                </tr>
-            </tbody>
-            <tbody>
-                <tr>
-                  <td>Micheal</td>
-                  <td>32</td>
-                  <td>Austalian</td>
-                </tr>
-            </tbody>
-            <tbody>
-                <tr>
-                  <td>Sophia</td>
-                  <td>21</td>
-                  <td>UK</td>
-                </tr>
-            </tbody>
-        </table>
+
     </article>
+    <footer>
+      <p>&copy; 2024 Equere EDIDIONG</p>
+    </footer>
 </body>
 </html>
