Build a Personal Portfolio Webpage

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,7 +23,7 @@
 
     <section>
         
-        <section id="projects">
+     <section id="projects">
             <h2>Projects</h2>
             <article>
                 <h3>Audaxious</h3>
@@ -31,22 +31,22 @@
 
             </article>
         </section>
-        <section id="about">
+      <section id="about">
             <h2>about</h2>
              <p>git, gitub etc</p>
         </section>
-        <section id="Contact">
+      <section id="Contact">
             <h2>Contact</h2>
              <p><a href="https://github/equereedidiong" target="_blank">Github Profile</a></p>
              <p><a href="https://www.linkedin.com/in/equereedidiong/" target="_blank">LinkedIn</a></p>
         </section>
     </section>
-
-    <article>
-
-    </article>
     <footer>
-      <p>&copy; 2024 Equere EDIDIONG</p>
+      <p>
+        
+        &copy; 2024 Equere EDIDIONG 
+
+      </p>
     </footer>
 </body>
 </html>
