Build a Personal Portfolio Webpage

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,6 +12,7 @@
     </header>
 
     <nav> 
+
         <ul>
             <li><a href="index.html">Project</a></li>
              <li><a href="about.html">About Me</a></li>
@@ -23,23 +24,30 @@
 
     <section>
         
-     <section id="projects">
-            <h2>Projects</h2>
+     <section
+            id="projects"> 
+        
+          <h2>Projects</h2>
             <article>
+
                 <h3>Audaxious</h3>
                 <p>A web 3.0 app <a href="https://github/equereedidiong" target="_blank">Github Profile</a> for more projects.</p>
 
             </article>
         </section>
-      <section id="about">
+      <section 
+          id="about">
             <h2>about</h2>
              <p>git, gitub etc</p>
         </section>
-      <section id="Contact">
+
+      <section 
+          id="Contact">
             <h2>Contact</h2>
              <p><a href="https://github/equereedidiong" target="_blank">Github Profile</a></p>
              <p><a href="https://www.linkedin.com/in/equereedidiong/" target="_blank">LinkedIn</a></p>
         </section>
+
     </section>
     <footer>
       <p>
