Re-doing week 3 tasks

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>EQUERE EDIDIONG ALFRED -Personal Portfolio</title>
 </head>
 <body>
+
+    <p> <h1> Hello There</h1>
+    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"> Click Image 1</a>
+    </p>
+    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"> Click Image 2</a><p> <h2>Hi there</h2>
+    </p>
+    <p> <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"> Click Image 3</a> <h3> Whatsup</h3></p>
+    <p> <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" > Click Image 4</a><h4> Welcome </h4></p>
     <header>
         <h1>Equere EDIDIONG</h1>
          <p> The best is yet to come</p>
