--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,7 +13,7 @@
       <h1>Equere EDIDIONG</h1>
       <nav> 
         
-        <a href="index.html">Project</a>
+        <a href="register.html">Register</a>
         <a href="about.html">About Me</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
