--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -8,21 +8,36 @@
   <link href="styles.css" rel="stylesheet">
 </head>
 
-<body class="container body" class="works_on_smartphone">
+<body>
+  
+  <p> Hi there we coming for you all</p> 
+  <p> Hi there we coming for you all</p> 
+  <p> Hi there we coming for you all</p> 
+  <p> Hi there we coming for you all</p> 
+
+  <h1>Equere Edidiong</h1>
+  <h2>This is football</h2>
+  <h3>Anything can happen</h3>
+  <img src="link https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Click me">
+
+</body>
+
+</html>
+
+<!-- <body class="container body" class="works_on_smartphone">
   
   <p> <h1> Hello There</h1>
->>>>>>> 768f7fd (Added to fix % error)
 
-    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"> Click Image 1</a>
-    </p>
-    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"> Click Image 2</a><p> <h2>Hi there</h2>
-    </p>
-    <p> <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"> Click Image 3</a> <h3> Whatsup</h3></p>
-    <p> <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" > Click Image 4</a><h4> Welcome </h4></p>
-    <header>
-        <h1>Equere EDIDIONG</h1>
-         <p> The best is yet to come</p>
-    </header>
+ <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"> Click Image 1</a>
+  </p>
+  <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"> Click Image 2</a><p> <h2>Hi there</h2>
+  </p>
+  <p> <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"> Click Image 3</a> <h3> Whatsup</h3></p>
+  <p> <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" > Click Image 4</a><h4> Welcome </h4></p>
+  <header>
+   <h1>Equere EDIDIONG</h1>
+       <p> The best is yet to come</p>
+  </header>
 
     <nav> 
         <ul>
@@ -61,5 +76,5 @@
     <footer>
       <p>&copy; 2024 Equere EDIDIONG</p>
     </footer>
-</body>
-</html>
+</body> -->
+<!-- </html> -->
