--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equere Edidiong -Personal Portfolio</title>
-    <link href="base.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <!-- <link href="base.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet"> -->
 </head>
 
 <header>
@@ -24,7 +24,7 @@
     </ul>
  </nav>
         
-   <section id="introduction"> 
+  <section id="introduction"> 
     
     <h2> Introduction </h2>
   
@@ -64,15 +64,15 @@
  
   </section>
 
- <section id="contact">
+  <section id="contact">
 
   
-  <h2>Contact</h2>
+    <h2>Contact</h2>
    <p><a href="mailto:your.equereAedidiong.com" target="_blank">Email</a></p>
    <p><a href="https://www.linkedin.com/in/equereedidiong/" target="_blank">LinkedIn</a></p>
    <p><a href="https://github.com/Equereedidiong" target="_blank">Github</a></p>
 
- </section>
+  </section>
 
   <article>
 
