--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -85,11 +85,9 @@
   </article>
 
   <footer>
-    <p>
-        
-      &copy 2024 Equere EDIDIONG 
 
-    </p>
+    &copy; 2024 Equere EDIDIONG 
+
   </footer>
 
 </body>
