--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -24,6 +24,14 @@
 
 <body>
 
+  <header>  
+    <ul>
+      <li><a href="#projects">Project</a></li>
+      <li><a href="#AboutMe">About Me</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+</header>
   <header>
 
     <ul>
@@ -36,7 +44,7 @@
 
     <h1>Equere EDIDIONG</h1>
 
-    <div style="">
+    <div styles="">
       <a href="register.html" style="padding: 10px;">Register</a>
       <a href="about.html" style="padding: 10px;" >About Me</a>
       <a href="services.html" style="padding: 10px;" >Services</a>
@@ -45,7 +53,8 @@
 
 
   </header>
-   <br><br><br><br>
+
+  
   <main>
 
     <article>   
