--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,21 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My first Html task</title>
 
-  <!-- <style>
-    table {
-        border-collapse: collapse; 
-        width: 100%; /* Optional: Set table width */
-    }
-    th, td {
-        border: 1px solid rgb(114, 111, 111); /* Add a border around each cell */
-        padding: 8px; /* Add some padding for better readability */
-        text-align: center; /* Align text to the left */
-    }
-    thead {
-        background-color: #f2f2f2; /* Optional: Add a background color to the header */
-    }
-</style> -->
-
 </head>
 
 <body>
@@ -51,7 +36,7 @@
 
     <aside> 
       
-      <p> Placeholder to add comment later </p>
+      <p>placeholder to add comment thread later</p>
 
     
     </aside>
