--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -41,7 +41,7 @@
 
   <footer> 
     
-    Made by Equere Alfred  <a href="https://github.com/Equereedidiong/My_First_Portfolio/tree/main" target="_blank">This is it</a>.
+    Made by Equere Alfred - <a href="https://github.com/Equereedidiong/My_First_Portfolio/tree/main" target="_blank">This is it</a>.
 
   </footer>
 
