--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -36,7 +36,7 @@
 
     <aside> 
       
-      <p>placeholder to add comment thread later</p>
+      <p> Placeholder to add comment later </p>
 
     
     </aside>
@@ -46,7 +46,8 @@
 
   <footer>
 
-    Made by Equere Edidiong <a href="https://github.com/Equereedidiong/My_First_Portfolio/tree/main" target="_blank"></a>
+    Made by Equere Alfred  - <a href="https://github.com/Equereedidiong/My_First_Portfolio/tree/main" target="_blank">This is it</a>.
+
 
   </footer>
  
