--- a/base_index.html
+++ b/base_index.html
@@ -7,5 +7,13 @@
 </head>
 <body>
    <p> Hi there we coming for you all</p> 
+   <p> Hi there we coming for you all</p> 
+   <p> Hi there we coming for you all</p> 
+   <p> Hi there we coming for you all</p> 
+
+   <h1>Equere Edidiong</h1>
+   <h2>This is football</h2>
+   <h3>Anything can happen</h3>
+   <img src="link https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Click me">
 </body>
 </html>
